fixed card overflow

--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -6,9 +6,7 @@
     flex-direction: column;
     align-items: center; 
     min-height: 254px;
-    white-space: nowrap;
     overflow: hidden;
-    text-overflow: ellipsis;
 
     &__img {
         width: 70px;
@@ -21,6 +19,10 @@
         font-size: 16px;
         line-height: 26px;
         margin-bottom: 20px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        width: 100%;
     }
 
     &__email {
@@ -28,6 +30,10 @@
         line-height: 26px;
         color: black;
         text-decoration: none;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        width: 100%;
     }
 
     &__phone {
