--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -22,6 +22,7 @@ html {
   font-size: 16px;
   font-family: Nunito;
   line-height: 26px;
+  align-self: center;
 
   &:hover {
     background-color: $btn-hover;
